Change logo image format from PNG to JPEG
Updated logo image from logo.png to logo.jpeg.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   <div class="page-wrapper">
     <div class="card">
       <header class="logo-row">
-        <img src="logo.png" alt="מיכל אספיס הפקות - לוגו">
+        <img src="logo.jpeg" alt="מיכל אספיס הפקות - לוגו">
         <div class="brand-text">
           <h1>מיכל אספיס הפקות</h1>
           <h2>ניהול והפקת אירועי חוויה לחברות וארגונים</h2>
@@ -286,3 +286,4 @@
   </div>
 </body>
 </html>
+
