--- a/index.html
+++ b/index.html
@@ -256,10 +256,10 @@
           <div class="info-block">
             <h3 class="section-title">יצירת קשר</h3>
             <p class="info-line">
-              <span class="info-label">טלפון:</span> ‎050-0000000
+              <span class="info-label">טלפון:</span> ‎0505521918
             </p>
             <p class="info-line">
-              <span class="info-label">דוא״ל:</span> info@i-am-pro.com
+              <span class="info-label">דוא״ל:</span> michal@i-am-pro.com
             </p>
             <p class="muted">
               לשיחה קצרה על הצרכים של החברה שלכם ויצירת אירוע חווייתי בהתאמה אישית.
@@ -269,10 +269,10 @@
           <div class="info-block">
             <h3 class="section-title">נכסים דיגיטליים</h3>
             <p class="info-line">
-              <span class="info-label">דומיין ראשי:</span> i-am-pro.com
+              <span class="info-label">Website:</span> i-am-pro.com
             </p>
             <p class="info-line">
-              ניתן להשתמש בדומיין זה ככתובת מרכזית לכל חומרי התקשורת וההזמנות הדיגיטליות של העסק.
+         
             </p>
           </div>
         </section>
@@ -286,5 +286,6 @@
   </div>
 </body>
 </html>
+
 
 
