--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
   <header class="header">
     <nav class="nav-container">
       <div class="logo">
-        <img src="logo.jpeg" alt="Logo" class="logo-img" onerror="this.style.display='none'">
+        <img src="logo-removebg-preview.png" alt="Logo" class="logo-img" onerror="this.style.display='none'">
         <span>מיכל אספיס הפקות</span>
       </div>
       <ul class="nav-menu">
@@ -431,7 +431,7 @@
   <!-- Hero Section -->
   <section id="home" class="hero">
     <div class="hero-content">
-      <img src="logo.jpeg" alt="I AM מיכל אספיס הפקות" class="hero-logo" onerror="this.style.display='none'">
+      <img src="logo-removebg-preview.png" alt="I AM מיכל אספיס הפקות" class="hero-logo" onerror="this.style.display='none'">
       <h1>הפקות אירועים לחברות ועסקים<br>בארץ ובחו״ל</h1>
       <h2>נפשים · ימי כיף · ערבי חברה · אירועי עובדים</h2>
       <p class="hero-description">
@@ -599,4 +599,3 @@
   </script>
 </body>
 </html>
-
