Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
         <li><a href="#services">שירותים</a></li>
         <li><a href="#gallery">גלריה</a></li>
         <li><a href="#about">אודות</a></li>
-        <li><a href="#contact" class="contact-btn">הזמינו אלינו</a></li>
+        <li><a href="#contact" class="contact-btn">צור קשר</a></li>
       </ul>
       <button class="mobile-menu-btn">☰</button>
     </nav>
@@ -433,14 +433,13 @@
     <div class="hero-content">
       <img src="logo-removebg-preview.png" alt="I AM מיכל אספיס הפקות" class="hero-logo" onerror="this.style.display='none'">
       <h1>הפקות אירועים לחברות ועסקים<br>בארץ ובחו״ל</h1>
-      <h2>נפשים · ימי כיף · ערבי חברה · אירועי עובדים</h2>
+      <h2>נופשים · ימי כיף · ערבי חברה · אירועי עובדים</h2>
       <p class="hero-description">
-        ליוו מלא משגע אנדרלמין ליט לעש המדיום האדיומו
       </p>
       <a href="#contact" class="cta-button">
         <span>←</span> צרו קשר
       </a>
-      <p class="cta-subtext">שחיית ייעוץ בחינם</p>
+
     </div>
   </section>
 
@@ -448,7 +447,6 @@
   <section id="services" class="services">
     <div class="container">
       <div class="section-header">
-        <p class="section-subtitle">השירותים שלנו</p>
         <h2 class="section-title">שירותי הפקה</h2>
       </div>
       <div class="services-grid">
@@ -560,12 +558,12 @@
         <div class="contact-item">
           <div class="contact-item-icon">📞</div>
           <h4>טלפון</h4>
-          <p>052-1234567</p>
+          <p>050-5521918</p>
         </div>
         <div class="contact-item">
           <div class="contact-item-icon">✉️</div>
           <h4>אימייל</h4>
-          <p>info@michalaspis.co.il</p>
+          <p>Michal@michalaspis.co.il</p>
         </div>
         <div class="contact-item">
           <div class="contact-item-icon">📍</div>
@@ -579,7 +577,7 @@
   <!-- Footer -->
   <footer class="footer">
     <p>&copy; 2025 מיכל אספיס הפקות. כל הזכויות שמורות.</p>
-    <p style="margin-top: 0.5rem; font-size: 0.85rem;">עמוד זה מיועד גם לצורכי אימות בעלות על הדומיין ועל העסק מול Meta / WhatsApp Business.</p>
+
   </footer>
 
   <script>
@@ -599,3 +597,4 @@
   </script>
 </body>
 </html>
+
