Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
         <div class="contact-item">
           <div class="contact-item-icon">✉️</div>
           <h4>אימייל</h4>
-          <p>Michal@michalaspis.co.il</p>
+          <p>michal@i-am-pro.com</p>
         </div>
         <div class="contact-item">
           <div class="contact-item-icon">📍</div>
@@ -597,4 +597,5 @@
   </script>
 </body>
 </html>
+
 
